--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-20 10:40:38
-# Total rules: 11862
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-20 19:36:38
+# Total rules: 11977
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -27,6 +27,7 @@
 .1558334541.rsc.cdn77.org
 .1675450967.rsc.cdn77.org
 .1991482557.rsc.cdn77.org
+.1hlahoc4rpc-sdk.rum.aliyuncs.com
 .1l-hit.mail.ru
 .1l-view.mail.ru
 .1oavsblobprodcus350.blob.core.windows.net
@@ -983,6 +984,7 @@
 .a48120048.cdn.optimizely.com
 .a4837467023474688.cdn.optimizely.com
 .a4843963509637120.cdn.optimizely.com
+.a4855038938447872.cdn.optimizely.com
 .a4912227187163136.cdn.optimizely.com
 .a4942072910708736.cdn.optimizely.com
 .a4952615256064000.cdn.optimizely.com
@@ -1634,6 +1636,7 @@
 .adsense.google.com
 .adsense.html5.qq.com
 .adsensecustomsearchads.com
+.adserver-1277986481.ap-northeast-1.elb.amazonaws.com
 .adserver-1964701068.eu-west-1.elb.amazonaws.com
 .adserver.bing.com
 .adserver.global.ssl.fastly.net
@@ -2003,6 +2006,7 @@
 .analytics.meituan.net
 .analytics.mobile-cdn.walmart.com.akadns.net
 .analytics.mobile-messenger.intercom.com
+.analytics.mobile.walmart.com
 .analytics.mpay.netease.com
 .analytics.mpay.samsung.com
 .analytics.msn.com
@@ -2435,6 +2439,7 @@
 .azurewatsontest.microsoft.com
 .b-graph.facebook.com
 .b.bst.126.net
+.b.px-cdn.net
 .b.smartvideo.youku.com
 .b2.mail.ru
 .b2binsider.adobe.com
@@ -2499,6 +2504,7 @@
 .beacon-api.aliyuncs.com
 .beacon-cdn-custom.walmart.com.akadns.net
 .beacon-cdn.walmart.com.akadns.net
+.beacon.affil.walmart.com
 .beacon.cdn.qq.com
 .beacon.dradis.netflix.com
 .beacon.dropbox.com
@@ -2510,6 +2516,7 @@
 .beacon.shazam.com
 .beacon.sina.com.cn
 .beacon.us-west-2.internal.dradis.netflix.com
+.beacon.walmart.com
 .beacon.wikia-services.com
 .beacon.www.theguardian.com
 .beaconcdn.qq.com
@@ -2683,6 +2690,7 @@
 .bxchx.pages.dev
 .bxtdlifzik.data.adobedc.net
 .by2.uservoice.com
+.byteadverts.com
 .bz-ipdx.baidu.com
 .bzclk.baidu.com
 .c-adash.m.taobao.com
@@ -3068,6 +3076,7 @@
 .collector-px27m703hm.px-cloud.net
 .collector-px2bgppb9a.px-cloud.net
 .collector-px2bubkzbv.px-cloud.net
+.collector-px2e972lwz.px-cdn.net
 .collector-px2e972lwz.px-cloud.net
 .collector-px2sz8xyop.px-cloud.net
 .collector-px2yes24ut.px-cloud.net
@@ -3076,9 +3085,13 @@
 .collector-px3d8mkyg1.px-cloud.net
 .collector-px3gmccvw0.px-cloud.net
 .collector-px3t817d4n.px-cloud.net
+.collector-px3vk96i6i.px-cdn.net
 .collector-px3vk96i6i.px-cloud.net
+.collector-px3vk96i6i.pxchk.net
 .collector-px3zezcyxc.px-cloud.net
+.collector-px41v9jz72.px-cdn.net
 .collector-px41v9jz72.px-cloud.net
+.collector-px41v9jz72.pxchk.net
 .collector-px46scnlxs.px-cloud.net
 .collector-px46uwk7he.px-cloud.net
 .collector-px4i06uv8m.px-cloud.net
@@ -3092,18 +3105,28 @@
 .collector-px5f4yr0ss.px-cloud.net
 .collector-px5lpy0yji.px-cloud.net
 .collector-px60hp0rl2.px-cloud.net
+.collector-px611dwqp1.px-cdn.net
 .collector-px611dwqp1.px-cloud.net
+.collector-px611dwqp1.pxchk.net
 .collector-px6a5i7vr2.px-cloud.net
 .collector-px6dv4bsnz.px-cloud.net
 .collector-px6s0wc5c7.px-cloud.net
+.collector-px6tnjz910.px-cdn.net
 .collector-px6tnjz910.px-cloud.net
 .collector-px6xnn2xkk.px-cloud.net
 .collector-px6yz0qmxv.px-cloud.net
+.collector-px6zcfgh4h.px-cdn.net
 .collector-px6zcfgh4h.px-cloud.net
+.collector-px6zcfgh4h.pxchk.net
+.collector-px78vmo82c.px-cdn.net
 .collector-px78vmo82c.px-cloud.net
+.collector-px78vmo82c.pxchk.net
 .collector-px7rns1bjj.px-cloud.net
+.collector-px7t66lsf8.px-cloud.net
 .collector-px7u8gdto7.px-cloud.net
+.collector-px7zme8qdi.px-cdn.net
 .collector-px7zme8qdi.px-cloud.net
+.collector-px7zme8qdi.pxchk.net
 .collector-px81wk13v6.px-cloud.net
 .collector-px85fbc6q9.px-cloud.net
 .collector-px87wpo5ak.px-cloud.net
@@ -3112,6 +3135,7 @@
 .collector-px8g6jeeev.px-cloud.net
 .collector-px8suhxpnm.px-cloud.net
 .collector-px8t5akzsq.px-cloud.net
+.collector-px8zofp9vf.px-cdn.net
 .collector-px8zofp9vf.px-cloud.net
 .collector-px943r4fb8.px-cloud.net
 .collector-px99qynk72.px-cloud.net
@@ -3121,11 +3145,13 @@
 .collector-px9gxgqy6v.px-cloud.net
 .collector-px9n5ebjj3.px-cloud.net
 .collector-px9vyuvz4f.px-cloud.net
+.collector-pxa0o07ort.px-cdn.net
 .collector-pxa0o07ort.px-cloud.net
 .collector-pxabo2yc8x.px-cloud.net
 .collector-pxacitks9g.px-cloud.net
 .collector-pxaflyiz9n.px-cloud.net
 .collector-pxag6zzoxu.px-cloud.net
+.collector-pxajdckzhd.px-cdn.net
 .collector-pxajdckzhd.px-cloud.net
 .collector-pxaoit9cn0.px-cloud.net
 .collector-pxaotqiwnf.px-cloud.net
@@ -3136,16 +3162,21 @@
 .collector-pxbe3rqbur.px-cloud.net
 .collector-pxbj5oofe8.px-cloud.net
 .collector-pxcfrcfefa.px-cloud.net
+.collector-pxckx6ilor.px-cdn.net
 .collector-pxckx6ilor.px-cloud.net
 .collector-pxclmbonip.px-cloud.net
+.collector-pxcvbtpurj.px-cdn.net
 .collector-pxcvbtpurj.px-cloud.net
+.collector-pxcvbtpurj.pxchk.net
 .collector-pxcvfymffs.px-cloud.net
 .collector-pxcypqynpz.px-cloud.net
 .collector-pxczdhf737.px-cloud.net
 .collector-pxd74ztjof.px-cloud.net
 .collector-pxdfu0nb9z.px-cloud.net
 .collector-pxdiygqmfm.px-cloud.net
+.collector-pxdkqo2nt9.px-cdn.net
 .collector-pxdkqo2nt9.px-cloud.net
+.collector-pxdkqo2nt9.pxchk.net
 .collector-pxdl6gosf9.px-cloud.net
 .collector-pxdl82i3ui.px-cloud.net
 .collector-pxdoe5cht3.px-cloud.net
@@ -3153,28 +3184,38 @@
 .collector-pxdtszcz83.px-cloud.net
 .collector-pxe8b8e9vd.px-cloud.net
 .collector-pxe97yvc0a.px-cloud.net
+.collector-pxebumdlwe.px-cdn.net
 .collector-pxebumdlwe.px-cloud.net
+.collector-pxebumdlwe.pxchk.net
 .collector-pxejsuixg1.px-cloud.net
 .collector-pxet15wiae.px-cloud.net
 .collector-pxf7je4fxv.px-cloud.net
 .collector-pxfdxb8emg.px-cloud.net
 .collector-pxferelyy8.px-cloud.net
 .collector-pxfezbrgkr.px-cloud.net
+.collector-pxff0j69t5.px-cdn.net
 .collector-pxff0j69t5.px-cloud.net
 .collector-pxfofgwnle.px-cloud.net
+.collector-pxfofgwnle.pxchk.net
+.collector-pxfrhhzvid.px-cdn.net
 .collector-pxfrhhzvid.px-cloud.net
+.collector-pxfrhhzvid.pxchk.net
 .collector-pxftnesmxr.px-cloud.net
 .collector-pxg1aj4pso.px-cloud.net
 .collector-pxg1gmnz2v.px-cloud.net
 .collector-pxg8atfja1.px-cloud.net
+.collector-pxgeyljesk.px-cdn.net
 .collector-pxgeyljesk.px-cloud.net
+.collector-pxgeyljesk.pxchk.net
 .collector-pxghenmjv3.px-cloud.net
 .collector-pxghzdhy7f.px-cloud.net
 .collector-pxglfzcgpa.px-cloud.net
 .collector-pxgm4fv3vc.px-cloud.net
 .collector-pxgnttli3a.px-cloud.net
 .collector-pxgqnulzzy.px-cloud.net
+.collector-pxgwpp4wus.px-cdn.net
 .collector-pxgwpp4wus.px-cloud.net
+.collector-pxgwpp4wus.pxchk.net
 .collector-pxgx12h0v0.px-cloud.net
 .collector-pxh1z8j4kw.px-cloud.net
 .collector-pxh5vhm86n.px-cloud.net
@@ -3185,20 +3226,33 @@
 .collector-pxhi2twrim.px-cloud.net
 .collector-pxhp4b16gp.px-cloud.net
 .collector-pxhsy3fa0i.px-cloud.net
+.collector-pxhvq8lrlb.px-cdn.net
 .collector-pxhvq8lrlb.px-cloud.net
+.collector-pxhvq8lrlb.pxchk.net
 .collector-pxhyg2lpf7.px-cloud.net
+.collector-pxhyx10rg3.px-cdn.net
 .collector-pxhyx10rg3.px-cloud.net
+.collector-pxhyx10rg3.pxchk.net
 .collector-pxi19wznqb.px-cloud.net
 .collector-pxidw5w468.px-cloud.net
+.collector-pxikkul2rm.px-cdn.net
 .collector-pxikkul2rm.px-cloud.net
+.collector-pxikkul2rm.pxchk.net
+.collector-pxio2jpcn8.px-cdn.net
 .collector-pxio2jpcn8.px-cloud.net
+.collector-pxio2jpcn8.pxchk.net
 .collector-pxirnc16b3.px-cloud.net
+.collector-pxiuboghjl.px-cdn.net
 .collector-pxiuboghjl.px-cloud.net
 .collector-pxizzvm3ey.px-cloud.net
 .collector-pxj1foyb2i.px-cloud.net
+.collector-pxj4y0bbmn.px-cdn.net
 .collector-pxj4y0bbmn.px-cloud.net
+.collector-pxj5wgkw4q.px-cdn.net
 .collector-pxj5wgkw4q.px-cloud.net
+.collector-pxj770cp7y.px-cdn.net
 .collector-pxj770cp7y.px-cloud.net
+.collector-pxj770cp7y.pxchk.net
 .collector-pxjbdhncwl.px-cloud.net
 .collector-pxjesgwpzk.px-cloud.net
 .collector-pxji55fafe.px-cloud.net
@@ -3207,21 +3261,30 @@
 .collector-pxjmcvubg8.px-cloud.net
 .collector-pxjzi79agz.px-cloud.net
 .collector-pxk13gov9g.px-cloud.net
+.collector-pxk3bezzfo.px-cdn.net
 .collector-pxk3bezzfo.px-cloud.net
+.collector-pxk3bezzfo.pxchk.net
+.collector-pxk3pmk6aw.px-cdn.net
 .collector-pxk3pmk6aw.px-cloud.net
+.collector-pxk56wkc4o.px-cdn.net
 .collector-pxk56wkc4o.px-cloud.net
 .collector-pxk9q1jq56.px-cloud.net
 .collector-pxkdrmolsb.px-cloud.net
 .collector-pxkdrqnl15.px-cloud.net
 .collector-pxkgkikzzj.px-cloud.net
+.collector-pxkknkrjgu.px-cdn.net
 .collector-pxkknkrjgu.px-cloud.net
+.collector-pxkknkrjgu.pxchk.net
 .collector-pxkm4nwu16.px-cloud.net
 .collector-pxkogoppbz.px-cloud.net
 .collector-pxkp4clsb5.px-cloud.net
+.collector-pxktmrtopw.px-cdn.net
 .collector-pxktmrtopw.px-cloud.net
+.collector-pxkxodf6rk.px-cdn.net
 .collector-pxkz8zzqmw.px-cloud.net
 .collector-pxl3efeja7.px-cloud.net
 .collector-pxlb0vny7w.px-cloud.net
+.collector-pxldm3ddsw.px-cdn.net
 .collector-pxldm3ddsw.px-cloud.net
 .collector-pxliujcowl.px-cloud.net
 .collector-pxljub4etb.cl6.px-cloud.net
@@ -3230,7 +3293,9 @@
 .collector-pxlsxlyya5.px-cloud.net
 .collector-pxlznv2dn4.px-cloud.net
 .collector-pxm0ea3jx0.px-cloud.net
+.collector-pxm6kav5mu.px-cdn.net
 .collector-pxm6kav5mu.px-cloud.net
+.collector-pxmfiffa8l.px-cdn.net
 .collector-pxmfiffa8l.px-cloud.net
 .collector-pxmk388tc2.px-cloud.net
 .collector-pxmkulqa8r.px-cloud.net
@@ -3238,6 +3303,7 @@
 .collector-pxn6kwgy36.px-cloud.net
 .collector-pxn8anl15k.px-cloud.net
 .collector-pxnazkg1pi.px-cloud.net
+.collector-pxnd6ad9ch.px-cloud.net
 .collector-pxnddshz8n.px-cloud.net
 .collector-pxneog4e2e.px-cloud.net
 .collector-pxnkbtefxe.px-cloud.net
@@ -3252,7 +3318,9 @@
 .collector-pxogckki0e.px-cloud.net
 .collector-pxogenisfh.px-cloud.net
 .collector-pxos37c4c4.px-cloud.net
+.collector-pxosx7m0dx.px-cdn.net
 .collector-pxosx7m0dx.px-cloud.net
+.collector-pxosx7m0dx.pxchk.net
 .collector-pxouqlb4fq.px-cloud.net
 .collector-pxovq3dcnm.px-cloud.net
 .collector-pxovxlrsmh.px-cloud.net
@@ -3261,14 +3329,19 @@
 .collector-pxp5ddh5ft.px-cloud.net
 .collector-pxp6l6jdfq.px-cloud.net
 .collector-pxpb7sa58f.px-cloud.net
+.collector-pxpetgchhu.px-cdn.net
 .collector-pxpetgchhu.px-cloud.net
+.collector-pxpetgchhu.pxchk.net
 .collector-pxpftaypj9.px-cloud.net
 .collector-pxpjrhlr4n.px-cloud.net
 .collector-pxpmq1d3fb.px-cloud.net
 .collector-pxpo11g9ah.px-cloud.net
 .collector-pxpoll8wvh.px-cloud.net
+.collector-pxpum5xzzw.px-cdn.net
 .collector-pxpum5xzzw.px-cloud.net
+.collector-pxpvnjmp4g.px-cdn.net
 .collector-pxpvnjmp4g.px-cloud.net
+.collector-pxpvnjmp4g.pxchk.net
 .collector-pxpx6fss1c.px-cloud.net
 .collector-pxq2osncsa.px-cloud.net
 .collector-pxq7kmehtk.px-cloud.net
@@ -3284,7 +3357,9 @@
 .collector-pxr50nd6ai.px-cloud.net
 .collector-pxrdut6ky7.px-cloud.net
 .collector-pxrf6d92ze.px-cloud.net
+.collector-pxrf8vapwa.px-cdn.net
 .collector-pxrf8vapwa.px-cloud.net
+.collector-pxrf8vapwa.pxchk.net
 .collector-pxrgwbgome.px-cloud.net
 .collector-pxrvwi1b26.px-cloud.net
 .collector-pxrw7m6iav.px-cloud.net
@@ -3292,12 +3367,16 @@
 .collector-pxs1fon05q.px-cloud.net
 .collector-pxs2wzhau8.px-cloud.net
 .collector-pxs2xi6u15.px-cloud.net
+.collector-pxsj1uzlsv.px-cdn.net
 .collector-pxsj1uzlsv.px-cloud.net
 .collector-pxslc3j22k.px-cloud.net
+.collector-pxsmtpgl4l.px-cdn.net
 .collector-pxsmtpgl4l.px-cloud.net
 .collector-pxsp9yp3kw.px-cloud.net
 .collector-pxspn2silb.px-cloud.net
+.collector-pxsw1vemrh.px-cdn.net
 .collector-pxsw1vemrh.px-cloud.net
+.collector-pxsw1vemrh.pxchk.net
 .collector-pxszbf5p84.px-cloud.net
 .collector-pxt1p5rban.px-cloud.net
 .collector-pxt6dy78t8.px-cloud.net
@@ -3313,10 +3392,14 @@
 .collector-pxtsl4e3pn.px-cloud.net
 .collector-pxtsr2zqxa.px-cloud.net
 .collector-pxtsv50is4.px-cloud.net
+.collector-pxtu0h5frq.px-cdn.net
 .collector-pxtu0h5frq.px-cloud.net
 .collector-pxtxbsu81h.px-cloud.net
+.collector-pxu4k0s8nx.px-cdn.net
 .collector-pxu4k0s8nx.px-cloud.net
+.collector-pxu6b0qd2s.px-cdn.net
 .collector-pxu6b0qd2s.px-cloud.net
+.collector-pxu6b0qd2s.pxchk.net
 .collector-pxucva8b9y.px-cloud.net
 .collector-pxuem2xini.px-cloud.net
 .collector-pxumwut9do.px-cloud.net
@@ -3326,13 +3409,18 @@
 .collector-pxv5xrmij5.px-cloud.net
 .collector-pxv8l5yo3y.px-cloud.net
 .collector-pxva6hkt61.px-cloud.net
+.collector-pxvb73hteg.px-cdn.net
 .collector-pxvb73hteg.px-cloud.net
+.collector-pxvlufj7uv.px-cdn.net
 .collector-pxvlufj7uv.px-cloud.net
+.collector-pxvlufj7uv.pxchk.net
 .collector-pxvnpbbfwe.px-cloud.net
 .collector-pxvtb0vdec.px-cloud.net
 .collector-pxvtidnbtc.px-cloud.net
 .collector-pxw0g1k35b.px-cloud.net
 .collector-pxw2r2if6r.px-cloud.net
+.collector-pxw4hytpjs.px-cloud.net
+.collector-pxwbxurdun.px-cdn.net
 .collector-pxwbxurdun.px-cloud.net
 .collector-pxwjdtmg7v.px-cloud.net
 .collector-pxwn0gh9ab.px-cloud.net
@@ -3345,7 +3433,9 @@
 .collector-pxxgwm9nuh.px-cloud.net
 .collector-pxxiuo7qtj.px-cloud.net
 .collector-pxxljwhhue.px-cloud.net
+.collector-pxxmpxrqpa.px-cdn.net
 .collector-pxxmpxrqpa.px-cloud.net
+.collector-pxxmpxrqpa.pxchk.net
 .collector-pxxnqyudif.px-cloud.net
 .collector-pxxor1k5b6.px-cloud.net
 .collector-pxxt4gy2ig.px-cloud.net
@@ -3358,20 +3448,26 @@
 .collector-pxyvdw1w56.px-cloud.net
 .collector-pxyvg65jje.px-cloud.net
 .collector-pxyzupxxw0.px-cloud.net
+.collector-pxz5wgh7n9.px-cdn.net
 .collector-pxz5wgh7n9.px-cloud.net
 .collector-pxz8qy9iwf.px-cloud.net
 .collector-pxzb6kj892.px-cloud.net
+.collector-pxzc5j78di.px-cdn.net
 .collector-pxzc5j78di.px-cloud.net
 .collector-pxzcx1k7er.px-cloud.net
 .collector-pxzd817sic.px-cloud.net
 .collector-pxzdyjqpod.px-cloud.net
 .collector-pxzg5bkbll.px-cloud.net
+.collector-pxzhh9f9x0.px-cdn.net
 .collector-pxzhh9f9x0.px-cloud.net
+.collector-pxzhh9f9x0.pxchk.net
 .collector-pxzitus4e5.px-cloud.net
 .collector-pxzneitfzp.px-cloud.net
 .collector-pxznu59zhd.px-cloud.net
 .collector-pxzviswmjw.px-cloud.net
+.collector-pxzyvfoxac.px-cdn.net
 .collector-pxzyvfoxac.px-cloud.net
+.collector-pxzyvfoxac.pxchk.net
 .collector.azure.cn
 .collector.bsg.brave.com
 .collector.bsg.bravesoftware.com
@@ -4736,7 +4832,6 @@
 .d35fnytsc51gnr.cloudfront.net
 .d35kbxc0t24sp8.cloudfront.net
 .d35nmq1qnoxdb9.cloudfront.net
-.d35p4zqon2wiyn.cloudfront.net
 .d35r45qhjmgs3g.cloudfront.net
 .d35u1vg1q28b3w.cloudfront.net
 .d35ve945gykp9v.cloudfront.net
@@ -5449,7 +5544,6 @@
 .di2e2m1cmrtc9.cloudfront.net
 .di2xlfgjbl0v7.cloudfront.net
 .di2xwvxz1jrvu.cloudfront.net
-.di6y7cb0tkbww.cloudfront.net
 .diagmon-policy.samsungdm.com
 .diagmon-serviceapi.samsungdm.com
 .diagnostics.support.microsoft.com
@@ -5695,6 +5789,7 @@
 .dreemdmbabys.oss-cn-guangzhou.aliyuncs.com
 .dreport.meituan.net
 .drf8e429z5jzt.cloudfront.net
+.drfdisvc.walmart.com
 .drgb74ojbgxg7.cloudfront.net
 .drlimmode9ddd.cloudfront.net
 .drm.market.xiaomi.com
@@ -5979,6 +6074,7 @@
 .etg.qq.com
 .etharticles.substack.com
 .ethicalads.io
+.etihadairways.data.adobedc.net
 .eu-album-api.vivoglobal.com
 .eu-central-1.elb.amazonaws.com
 .eu-cota.vivoglobal.com
@@ -6004,6 +6100,7 @@
 .euc-powerpoint-telemetry.officeapps.live.com
 .euc-visio-telemetry.officeapps.live.com
 .euc-word-telemetry.officeapps.live.com
+.eui.data.adobedc.net
 .eum.instana.io.cdn.cloudflare.net
 .eurffc-word-telemetry.officeapps.live.com
 .europe-west1-bonnier-big-data.cloudfunctions.net
@@ -6444,6 +6541,7 @@
 .go2yd.com
 .gocheck.pages.dev
 .godkc.com
+.goindigo.in.data.adobedc.net
 .golden1.sogou.com
 .golden1.sohu.com
 .goo-access-analytics.appspot.com
@@ -6716,6 +6814,7 @@
 .hpd.baidu.com
 .hpjy-report.tga.qq.com
 .hpplay.cn
+.hq-tracking.qq.com
 .hreport.meituan.com
 .hs-analytics.net
 .hs-scripts.com
@@ -7866,6 +7965,7 @@
 .metrics.taobao.com
 .metrics.ted.com
 .metrics.theatlantic.com
+.metrics.walmart.com
 .metrics.zacks.com
 .metrika.yandex.ru
 .mfm.video.qq.com
@@ -8161,6 +8261,7 @@
 .ndct-data.video.iqiyi.com
 .ndstage.wpengine.com
 .nearby.3g.qq.com
+.nedbank.data.adobedc.net
 .neirong.baidu.com
 .neptune-api.volces.com
 .neptune-platform.zijieapi.com
@@ -8205,6 +8306,7 @@
 .nil.naver.com
 .nissd1.10010.com
 .nitrous-analytics.s3.amazonaws.com
+.niztrmhx8t.data.adobedc.net
 .nj.t.bcsp2p.baidu.com
 .nl-rcd.iqiyi.com
 .nl.rcd.iqiyi.com
@@ -8307,6 +8409,8 @@
 .omni.commercial.pccw.com
 .omni.conferencing.pccw.com
 .omni.istockphoto.com
+.omniture-ssl.walmart.com
+.omniture.walmart.com
 .oms.barrons.com
 .oms.wsj.com
 .omtrdc.net
@@ -10205,6 +10309,7 @@
 .smetrics.samsung.com
 .smetrics.samsung.com.cn
 .smetrics.verisign.com
+.smetrics.walmart.com
 .smi.pp.ua
 .smr.snssdk.com
 .smr.snssdk.com.w.cdngslb.com
@@ -10958,6 +11063,7 @@
 .tracking.ti.com
 .tracking.unrealengine.com
 .tracking.xueqiu.com
+.tracking01.walmart.com
 .tracking3.lenovo.com
 .trackinginternal.ti.com
 .trackonomics.net
@@ -11078,6 +11184,7 @@
 .ulic.baidu.com
 .ulink.cc.163.com
 .ulog-sdk.gifshow.com
+.ulog-sdk.ksapisrv.com
 .ulog.gifshow.com
 .ulog.imap.baidu.com
 .ulog.ksapisrv.com
@@ -11344,7 +11451,14 @@
 .virusinfo-cloudscan-cn.heytapmobi.com
 .viruswarning1218usbyy1am.z13.web.core.windows.net
 .viruswarning1218usc6whq0.z13.web.core.windows.net
+.viruswarning1218usgn4mzl.z13.web.core.windows.net
 .viruswarning1218usxdwn7v.z13.web.core.windows.net
+.viruswarning1219us1f9t99.z13.web.core.windows.net
+.viruswarning1219usjse5ue.z13.web.core.windows.net
+.viruswarning1219usl3cyrj.z13.web.core.windows.net
+.viruswarning1219uslqracx.z13.web.core.windows.net
+.viruswarning1219uspcs5d7.z13.web.core.windows.net
+.viruswarning1219uszhyec3.z13.web.core.windows.net
 .visio-telemetry.officeapps.live.com
 .visit.webhosting.yahoo.com
 .visitor.crm2.qq.com
@@ -11378,6 +11492,7 @@
 .vp.html5.qq.com
 .vpic.video.qq.com
 .vsblobprodscussu5shard66.blob.core.windows.net
+.vsblobprodscussu5shard82.blob.core.windows.net
 .vsh.pp.ua
 .vstat.my.tv.sohu.com
 .vstat.v.blog.sohu.com
