--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-25 14:25:56
-# Total rules: 12026
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-26 10:38:49
+# Total rules: 11999
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -28,7 +28,6 @@
 .1675450967.rsc.cdn77.org
 .1991482557.rsc.cdn77.org
 .1hlahoc4rpc-sdk.rum.aliyuncs.com
-.1jk5qcsjzo.data.adobedc.net
 .1l-hit.mail.ru
 .1l-view.mail.ru
 .1oavsblobprodcus350.blob.core.windows.net
@@ -93,7 +92,6 @@
 .8inhjmd.usefathom.com
 .8rn1y79f02-1.algolianet.com
 .92x.tumblr.com
-.96bkyzkstu.data.adobedc.net
 .9e83087e91.com
 .9gt1f3cohu.data.adobedc.net
 .9kvptcrbor.data.adobedc.net
@@ -284,7 +282,6 @@
 .a17495331463.cdn.optimizely.com
 .a17495660521.cdn.optimizely.com
 .a17503140280.cdn.optimizely.com
-.a17510701075.cdn.optimizely.com
 .a17529800006.cdn.optimizely.com
 .a17586580222.cdn.optimizely.com
 .a177184506.cdn.optimizely.com
@@ -460,7 +457,6 @@
 .a21625780072.cdn.optimizely.com
 .a21630000199.cdn.optimizely.com
 .a21645491094.cdn.optimizely.com
-.a21711352012.cdn.optimizely.com
 .a21711432014.cdn.optimizely.com
 .a21723500485.cdn.optimizely.com
 .a21729970583.cdn.optimizely.com
@@ -726,6 +722,7 @@
 .a25781141164.cdn.optimizely.com
 .a25785590076.cdn.optimizely.com
 .a25789930096.cdn.optimizely.com
+.a25852590293.cdn.optimizely.com
 .a25873760268.cdn.optimizely.com
 .a25879780104.cdn.optimizely.com
 .a25928950468.cdn.optimizely.com
@@ -754,7 +751,6 @@
 .a26310890636.cdn.optimizely.com
 .a26326341062.cdn.optimizely.com
 .a26330300728.cdn.optimizely.com
-.a26334390584.cdn.optimizely.com
 .a26334950855.cdn.optimizely.com
 .a26349430206.cdn.optimizely.com
 .a26412040784.cdn.optimizely.com
@@ -998,14 +994,12 @@
 .a5090114122.cdn.optimizely.com
 .a5110280405909504.cdn.optimizely.com
 .a5113954737848320.cdn.optimizely.com
-.a5132049628004352.cdn.optimizely.com
 .a5160292989009920.cdn.optimizely.com
 .a5171550442225664.cdn.optimizely.com
 .a5173948275490816.cdn.optimizely.com
 .a523170811.cdn.optimizely.com
 .a524690941.cdn.optimizely.com
 .a5250744593416192.cdn.optimizely.com
-.a5263375337259008.cdn.optimizely.com
 .a5270536083734528.cdn.optimizely.com
 .a5271073.cdn.optimizely.com
 .a5292374380249088.cdn.optimizely.com
@@ -1030,7 +1024,6 @@
 .a5607107806887936.cdn.optimizely.com
 .a5624231270.cdn.optimizely.com
 .a5641440198393856.cdn.optimizely.com
-.a5676741851611136.cdn.optimizely.com
 .a5682661843271680.cdn.optimizely.com
 .a5698391926112256.cdn.optimizely.com
 .a5719158042656768.cdn.optimizely.com
@@ -1056,8 +1049,6 @@
 .a61135178.cdn.optimizely.com
 .a6131884851.cdn.optimizely.com
 .a6136581106.cdn.optimizely.com
-.a6146157886308352.cdn.optimizely.com
-.a6147442509348864.cdn.optimizely.com
 .a6147784059912192.cdn.optimizely.com
 .a6169963916951552.cdn.optimizely.com
 .a6194110778.cdn.optimizely.com
@@ -1065,7 +1056,6 @@
 .a6207841426472960.cdn.optimizely.com
 .a6217617971609600.cdn.optimizely.com
 .a6253774759526400.cdn.optimizely.com
-.a6263502310998016.cdn.optimizely.com
 .a627150995.cdn.optimizely.com
 .a6295702960078848.cdn.optimizely.com
 .a6376052200046592.cdn.optimizely.com
@@ -1075,7 +1065,6 @@
 .a6510400228294656.cdn.optimizely.com
 .a6524475903049728.cdn.optimizely.com
 .a6529002483.cdn.optimizely.com
-.a6532462424096768.cdn.optimizely.com
 .a6558036.cdn.optimizely.com
 .a6561280243.cdn.optimizely.com
 .a6582070441.cdn.optimizely.com
@@ -1183,7 +1172,6 @@
 .access-trerz-io-en.pages.dev
 .access-trezz-io-en.pages.dev
 .accountconfirm-managerpage-requestreview-verifynow.pages.dev
-.accredo.com.data.adobedc.net
 .accscdn.m.taobao.com
 .ace.naver.com
 .acfeedbackws.icloud.com
@@ -1236,9 +1224,9 @@
 .ad-interactions-prod-lb-773417274.us-east-2.elb.amazonaws.com
 .ad-log-upload-os.mihoyo.com
 .ad-log-upload.mihoyo.com
+.ad-material.ys7.com
 .ad-ops-assets.s3.us-east-1.amazonaws.com
 .ad-pdf.s3.amazonaws.com
-.ad-reporting.forbes.com
 .ad-scope.com.cn
 .ad-sdk.huxiu.com
 .ad-serve.b-cdn.net
@@ -1505,7 +1493,6 @@
 .ads-prod-narrowcasting.s3.us-west-2.amazonaws.com
 .ads-production-public.s3.amazonaws.com
 .ads-production-public.s3.us-east-1.amazonaws.com
-.ads-rendering-prod.corp.google.com
 .ads-script.b-cdn.net
 .ads-sdk-gateway.prd.mz.internal.unity3d.com
 .ads-servebom-com.cdn.ampproject.org
@@ -1742,7 +1729,6 @@
 .adver.qq.com
 .adverrd.global.ssl.fastly.net
 .advert-prod.hyrz.qq.com
-.advert.ainvest.com
 .advert.lx.netease.com
 .advert.qq.com
 .advertiseonbing.azureedge.net
@@ -1871,7 +1857,6 @@
 .aliyaoberbrunnergreg21.myshopify.com
 .ally.data.adobedc.net
 .alphaupsell.s3.ap-northeast-2.amazonaws.com
-.alpwiijq5x.data.adobedc.net
 .als-svc.nytimes.com
 .alt-ad.mail.ru
 .alterramountaincompany.data.adobedc.net
@@ -2011,7 +1996,6 @@
 .analytics.itunes.apple.com
 .analytics.kaltura.com
 .analytics.live.com
-.analytics.lon.appsvc.an.adobe.com
 .analytics.macpaw.com
 .analytics.mall.yahoo.com
 .analytics.map.qq.com
@@ -2434,7 +2418,6 @@
 .autofill.yandex.ru
 .aviary.amazon.co.jp
 .aviary.amazon.com
-.avivauk.data.adobedc.net
 .avlstatic.vivo.com.cn
 .awap3.jos.hicloud.com
 .awaps.yandex.ru
@@ -2450,7 +2433,6 @@
 .az-neverblock.aznude.workers.dev
 .az.appstore.vivo.com.cn
 .azapp-adserver-prod.azurewebsites.net
-.azuretipsandtrick101.z13.web.core.windows.net
 .azurewatson.microsoft.com
 .azurewatsontest.microsoft.com
 .b-graph.facebook.com
@@ -2561,6 +2543,7 @@
 .bi.manhuaren.com
 .bidease.b-cdn.net
 .bidmatic.io
+.bigcrunch.com
 .bigdata-lbs-pri-c3.alb.xiaomi.com
 .bigdata.qq.com
 .bigdata.ssp.samsung.com
@@ -2584,7 +2567,6 @@
 .bksdkconfig.play.cp81.ott.cibntv.net
 .bksoup.v.qq.com
 .bla.gtimg.com
-.blackbaud.com.data.adobedc.net
 .blackhole-m.m.jd.com
 .blackhole.m.jd.com
 .blacktri-a.akamaihd.net
@@ -2811,7 +2793,6 @@
 .cast.imp.joins.com
 .castatic.fengkongcloud.com
 .catalog.video.msn.com
-.caterpillarsigns.data.adobedc.net
 .cathaypacific.data.adobedc.net
 .cb.baidu.com
 .cba.data.adobedc.net
@@ -3059,7 +3040,6 @@
 .co-vcode-api.vivoglobal.com
 .co-vcode-od.vivoglobal.com
 .co-vcode-or.vivoglobal.com
-.co.data.adobedc.net
 .coca-cola.com.data.adobedc.net
 .cocojen.cdn.bcebos.com
 .col.eum-appdynamics.com
@@ -3141,7 +3121,9 @@
 .collector-px78vmo82c.px-cdn.net
 .collector-px78vmo82c.px-cloud.net
 .collector-px78vmo82c.pxchk.net
+.collector-px7mlzwdec.px-cloud.net
 .collector-px7rns1bjj.px-cloud.net
+.collector-px7t66lsf8.px-cloud.net
 .collector-px7u8gdto7.px-cloud.net
 .collector-px7zme8qdi.px-cdn.net
 .collector-px7zme8qdi.px-cloud.net
@@ -3225,7 +3207,6 @@
 .collector-pxgeyljesk.px-cdn.net
 .collector-pxgeyljesk.px-cloud.net
 .collector-pxgeyljesk.pxchk.net
-.collector-pxghenmjv3.px-cloud.net
 .collector-pxghzdhy7f.px-cloud.net
 .collector-pxglfzcgpa.px-cloud.net
 .collector-pxgm4fv3vc.px-cloud.net
@@ -3274,7 +3255,6 @@
 .collector-pxjbdhncwl.px-cloud.net
 .collector-pxjesgwpzk.px-cloud.net
 .collector-pxji55fafe.px-cloud.net
-.collector-pxjjodo4kj.px-cloud.net
 .collector-pxjmbe7t0q.px-cloud.net
 .collector-pxjmcvubg8.px-cloud.net
 .collector-pxjzi79agz.px-cloud.net
@@ -3322,7 +3302,6 @@
 .collector-pxn6kwgy36.px-cloud.net
 .collector-pxn8anl15k.px-cloud.net
 .collector-pxnazkg1pi.px-cloud.net
-.collector-pxnd6ad9ch.px-cloud.net
 .collector-pxnddshz8n.px-cloud.net
 .collector-pxneog4e2e.px-cloud.net
 .collector-pxnkbtefxe.px-cloud.net
@@ -3354,7 +3333,6 @@
 .collector-pxpftaypj9.px-cloud.net
 .collector-pxpjrhlr4n.px-cloud.net
 .collector-pxpmq1d3fb.px-cloud.net
-.collector-pxpo11g9ah.px-cloud.net
 .collector-pxpoll8wvh.px-cloud.net
 .collector-pxpum5xzzw.px-cdn.net
 .collector-pxpum5xzzw.px-cloud.net
@@ -3363,7 +3341,6 @@
 .collector-pxpvnjmp4g.pxchk.net
 .collector-pxpx6fss1c.px-cloud.net
 .collector-pxq2osncsa.px-cloud.net
-.collector-pxq7kmehtk.px-cloud.net
 .collector-pxq99aloxk.px-cloud.net
 .collector-pxqddeqiui.px-cloud.net
 .collector-pxqduea19o.px-cloud.net
@@ -3420,7 +3397,6 @@
 .collector-pxu6b0qd2s.px-cdn.net
 .collector-pxu6b0qd2s.px-cloud.net
 .collector-pxu6b0qd2s.pxchk.net
-.collector-pxucva8b9y.px-cloud.net
 .collector-pxuem2xini.px-cloud.net
 .collector-pxumwut9do.px-cloud.net
 .collector-pxur63h57z.px-cloud.net
@@ -3574,7 +3550,6 @@
 .cookietracking.azurewebsites.net
 .cookiex.ngd.yahoo.com
 .cooperativebank.data.adobedc.net
-.coordinator.cm.bloomberg.com
 .cootlogix.com
 .copilot-telemetry.githubusercontent.com
 .coral-task.uc.cn
@@ -3586,7 +3561,6 @@
 .corp.sts.microsoft.com
 .corpext.msitadfs.glbdns2.microsoft.com
 .cortalconsors1.data.adobedc.net
-.cortana-gateway.amazon.com
 .count.mail.163.com
 .count.taobao.com
 .count.video.sina.com.cn
@@ -3609,6 +3583,7 @@
 .countly.zendesk.com
 .countlyv6.mail.ntes53.netease.com
 .couponcp-a.akamaihd.net
+.coventrybuildingsociety.data.adobedc.net
 .cp2.eastmoney.com
 .cpatrk.net
 .cpc.sogou.com
@@ -5329,6 +5304,7 @@
 .data-reporting.agora.io
 .data-saver-cindi.herokuapp.com
 .data-tracker-43ai52v45a-ew.a.run.app
+.data.a.fanaticscommerce.com.data.adobedc.net
 .data.aem-showcase-internal.adobe.com
 .data.aem-sites-internal.adobe.com
 .data.b2bmail.adobe.com
@@ -5338,7 +5314,6 @@
 .data.corp.unity3d.com
 .data.customer-success-apac.adobe.com
 .data.diagnostics.office.com
-.data.digital.adobe.com
 .data.dm.casio.com.data.adobedc.net
 .data.dm.casio.info.data.adobedc.net
 .data.e.adobe.com
@@ -5684,7 +5659,6 @@
 .dmw2pzbenclyd.cloudfront.net
 .dmxhgf4zuwdvu.cloudfront.net
 .dmz3nd5oywtsw.cloudfront.net
-.dn-growing.qbox.me
 .dn0qt3r0xannq.cloudfront.net
 .dn34cbtcv9mef.cloudfront.net
 .dn3uy6cx65ujf.cloudfront.net
@@ -5694,7 +5668,6 @@
 .dn7u3i0t165w2.cloudfront.net
 .dn9uzzhcwc0ya.cloudfront.net
 .dna8twue3dlxq.cloudfront.net
-.dnbbankasa.data.adobedc.net
 .dnconfig.cmpassport.com
 .dne6rbzy5csnc.cloudfront.net
 .dnet.mb.qq.com
@@ -5981,7 +5954,6 @@
 .e1.o.lencr.org
 .e20d8e38992b.o3n.io
 .e77lmzbqou0n-a.akamaihd.net
-.e8aeb8bbdbbd7.cdn.sohucs.com
 .e8u2tnpszf.data.adobedc.net
 .earth.cointelegraph.com
 .easygdpr.b-cdn.net
@@ -6237,7 +6209,6 @@
 .familygiftlove.myshopify.com
 .famousfootwear.com.data.adobedc.net
 .fanatics.com.data.adobedc.net
-.fanaticscommerce.com.data.adobedc.net
 .fans.m.tmall.com
 .fantastic-salamander-c721cb.netlify.app
 .fantuan.bz.mgtv.com
@@ -6335,6 +6306,7 @@
 .flurry.com
 .flyinad-bucket83908e77-m1zawid3awth.s3.eu-central-1.amazonaws.com
 .flysleep.cn
+.flyx-analytics.vynx.workers.dev
 .fm.qzone.qq.com
 .fmhy-net.pages.dev
 .fmhy-official.pages.dev
@@ -6654,7 +6626,6 @@
 .guidance.ghost.io
 .guif-eu.coloros.com
 .guif.coloros.com
-.guitarcenter.data.adobedc.net
 .gumgum.com
 .gvideo.qpic.cn
 .gvt2.com
@@ -6731,7 +6702,6 @@
 .hermes.jd.com
 .heyue.xiaomi.com
 .hg-statsd.setapp.com
-.hghrkhbztb.data.adobedc.net
 .hiad.myweb.hinet.net
 .hiad.vmall.com
 .hijack.baidu.com
@@ -6903,6 +6873,7 @@
 .hw-v2-web-player-tracker.biliapi.net
 .hwa.his.huawei.com
 .hwstats.unity3d.com
+.hwztx6svg3-default-cn.rum.aliyuncs.com
 .hxyhxsq4jc-sdk.rum.aliyuncs.com
 .hybrid.intl.xiaomi.com
 .hybrid.miniapp.taobao.com
@@ -7309,7 +7280,6 @@
 .kde.qq.com
 .kepler.jd.com
 .keplerapi.jd.com
-.kew3pculob.data.adobedc.net
 .key.com.data.adobedc.net
 .keyrotate.qq.com
 .kgb-ifs.tanx.com
@@ -7683,13 +7653,18 @@
 .login-ourtime.members-datings.workers.dev
 .login.optimizely.com
 .logitech.com.data.adobedc.net
+.logs-1.algolia.com
 .logs-2.algolia.com
 .logs-3.algolia.com
 .logs-4.algolia.com
+.logs-5.algolia.com
+.logs-6.algolia.com
+.logs-7.algolia.com
 .logs-8.algolia.com
 .logs-9.algolia.com
 .logs.amap.com
 .logs.appsource.microsoft.com
+.logs.betterstack.com
 .logs.blip.net
 .logs.bloomberg.com
 .logs.browserstack.com
@@ -7699,7 +7674,6 @@
 .logs.eu-west-1.internal.dradis.netflix.com
 .logs.game.qq.com
 .logs.grayjay.app
-.logs.igslb.bloomberg.com
 .logs.n.xiaomi.com
 .logs.netflix.com
 .logs.slo.test.ds.unity3d.com
@@ -7863,7 +7837,6 @@
 .marketingweek.imgix.net
 .marphezis.com
 .mars.jd.com
-.marshandmclennan.data.adobedc.net
 .martech.condenastdigital.com
 .masdk.3g.qq.com
 .masdkv6.3g.qq.com
@@ -7886,7 +7859,6 @@
 .matomo.bunny.net
 .matomo.cloud
 .matomo.devexpress.com.cdn.cloudflare.net
-.matomo.epo.org.cdn.cloudflare.net
 .matomo.garmin.com.cdn.cloudflare.net
 .matomo.hetzner.com
 .matomo.mgmt.sharks.cloud.cdn.cloudflare.net
@@ -7972,6 +7944,7 @@
 .metrics-mgr.cds.unity3d.com
 .metrics-mgr.ds.unity3d.com
 .metrics.accuweather.com
+.metrics.adobe.com
 .metrics.agent.datadoghq.com
 .metrics.apple.com
 .metrics.beyondwords.io
@@ -9863,6 +9836,7 @@
 .server-side-tagging-h2qw55nphq-uc.a.run.app
 .server-side-tagging-h3sa2x4bfa-uc.a.run.app
 .server-side-tagging-h6qyp6ez7a-uc.a.run.app
+.server-side-tagging-h7qcd4fhaa-uc.a.run.app
 .server-side-tagging-hagb5cf6bq-uc.a.run.app
 .server-side-tagging-hangnitwaa-uc.a.run.app
 .server-side-tagging-hayzpmf72a-uc.a.run.app
@@ -10020,6 +9994,7 @@
 .server-side-tagging-pfb3tkcfna-uc.a.run.app
 .server-side-tagging-ph4bjl3uhq-uc.a.run.app
 .server-side-tagging-piacwjzpmq-uc.a.run.app
+.server-side-tagging-pjh7rygsaq-uc.a.run.app
 .server-side-tagging-pl7fk45jlq-uc.a.run.app
 .server-side-tagging-pmr5pfx43a-uc.a.run.app
 .server-side-tagging-pmrkxe6mda-uc.a.run.app
@@ -10553,7 +10528,6 @@
 .stats.economist.com
 .stats.fastcompany.com
 .stats.fifthstarlabs.io
-.stats.figshare.com
 .stats.ign.com
 .stats.kaltura.com
 .stats.kde.org
@@ -10679,7 +10653,6 @@
 .symplr-analytics-xddc4j3vva-ey.a.run.app
 .sync-yieldmo-com-tf-1869548451.eu-west-1.elb.amazonaws.com
 .synchrony.com.data.adobedc.net
-.synchronybank.com.data.adobedc.net
 .syncplusconfig.s3.amazonaws.com
 .syncwallet.pages.dev
 .syndicatedsearch.goog
@@ -11376,6 +11349,7 @@
 .usage.growthbook.io
 .usage.influxdata.com
 .usageanalytics.coveo.com
+.usbrowserspeed.com
 .usc-onenote-telemetry.officeapps.live.com
 .usc-visio-telemetry.officeapps.live.com
 .usdclog-nginx-hik-connect-eu-1428162561.eu-west-1.elb.amazonaws.com
@@ -11469,7 +11443,6 @@
 .vendorlist.consensu.org
 .vendors.privacymanager.io
 .venezia-measurements.s3-external-1.amazonaws.com
-.verizontelecom.data.adobedc.net
 .veta.naver.com
 .vf.startpage.com
 .vfnh3wo0i4er8gfv0-3ihbn4-0rgbfnh-03w4b.obs.la-south-2.myhuaweicloud.com
@@ -11505,6 +11478,7 @@
 .view.adjust.world
 .view.zijieapi.com
 .views.hulu.com.akadns.net
+.viking.com.data.adobedc.net
 .vilaghelyzete.blogspot.com
 .vip-api.xmpush.global.xiaomi.com
 .virusinfo-cloudscan-cn.heytapmobi.com
@@ -11567,7 +11541,6 @@
 .w4o7aea80ss3-a.akamaihd.net
 .w5sac788c1.360doc.cn
 .w8.com.cn
-.w8a27b25y5.data.adobedc.net
 .wa-groupbebe.pages.dev
 .wa.gtimg.com
 .wa.scribd.com
@@ -11851,6 +11824,7 @@
 .youku-acs.m.taobao.com
 .youku-crm-product.youku.com
 .yourchatgptguide.gumroad.com
+.yourtrackingserver.data.adobedc.net
 .youxi.baidu.com
 .youxi.kugou.com
 .ys-log-upload.mihoyo.com
@@ -11866,7 +11840,6 @@
 .yun-hl.3g.qq.com
 .yunxindns.com
 .yunxinfw.com
-.yurjsnlknv.data.adobedc.net
 .yx.lenovomm.com
 .yybx.oss-cn-hangzhou.aliyuncs.com
 .z-p3-api.facebook.com
