--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-27 21:04:39
-# Total rules: 11945
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-28 10:43:32
+# Total rules: 11989
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -11,6 +11,7 @@
 .0x00000000000.substack.com
 .1.wps.cn
 .1080872514.rsc.cdn77.org
+.1097834592.rsc.cdn77.org
 .11-c3.bigdata.ctc.neo.xiaomi.com
 .1174862774.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
@@ -82,6 +83,7 @@
 .7q1z79gxsi.global.ssl.fastly.net
 .7zgiest3zy.data.adobedc.net
 .8035ugt-w34hrg-0hjwre-ghjew-r0hg-ehg9-h-rtg.obs.af-south-1.myhuaweicloud.com
+.829331534d183e7d1f6a-8d91cc88b27b979d0ea53a10ce8855ec.r96.cf5.rackcdn.com
 .857chwukib.data.adobedc.net
 .86uk.com
 .87104801.b-cdn.net
@@ -104,6 +106,7 @@
 .a.baidu.com
 .a.cctv.com
 .a.ckm.iqiyi.com
+.a.cntv.cn
 .a.gsmarena.com
 .a.hcaptcha.com
 .a.hl.mi.com
@@ -1253,6 +1256,7 @@
 .ad.docer.wps.cn
 .ad.doubanio.com
 .ad.e.waimai.sankuai.com
+.ad.eporner.com
 .ad.eu.xiaomi.com
 .ad.fcbox.com
 .ad.gmw.cn
@@ -1486,7 +1490,6 @@
 .ads-script.b-cdn.net
 .ads-sdk-gateway.prd.mz.internal.unity3d.com
 .ads-servebom-com.cdn.ampproject.org
-.ads-server-lb-2025-347698553.ap-southeast-1.elb.amazonaws.com
 .ads-service-65663778556.us-central1.run.app
 .ads-service.tiktok.com
 .ads-setu-proxy-eu.amazon.com
@@ -1552,6 +1555,7 @@
 .ads.pinterest.com
 .ads.prd.ie.internal.unity3d.com
 .ads.privacy.qq.com
+.ads.pro-market.net.edgesuite.net
 .ads.prod.webservices.mozgcp.net
 .ads.reddit.com
 .ads.rmbl.ws.cdn.cloudflare.net
@@ -1586,6 +1590,7 @@
 .ads.yahoo.com
 .ads.yam.com
 .ads.yimg.com
+.ads.yimg.com.edgesuite.net
 .ads.youtube.com
 .ads.zaobao.com
 .ads01.pages.dev
@@ -1628,6 +1633,8 @@
 .adserver-1964701068.eu-west-1.elb.amazonaws.com
 .adserver.bing.com
 .adserver.global.ssl.fastly.net
+.adserver.ign.com
+.adserver.softonic.com
 .adserver.yahoo.com
 .adservergatewayprod.southcentralus.cloudapp.azure.com
 .adservice.aliexpress.com
@@ -1653,6 +1660,7 @@
 .adshmmsg.qq.com
 .adshows.21cn.com
 .adshunter.fra1.digitaloceanspaces.com
+.adsimg.s3.cn-northwest-1.amazonaws.com.cn
 .adslot.uc.cn
 .adslvfile.qq.com
 .adslvseed.qq.com
@@ -1767,6 +1775,7 @@
 .afd.baidu.com
 .afd.l.google.com
 .afdconf.baidu.com
+.affiliate.googleusercontent.com
 .affiliates.bhphotovideo.com
 .affiliationjs.s3.amazonaws.com
 .affiliatly.com
@@ -2248,6 +2257,7 @@
 .app.launchdarkly.com
 .app.miui.com
 .app.optimizely.com
+.app.partnerboost.com
 .app.pendo.io
 .app.reuters.com
 .app.sbz.workers.dev
@@ -2473,7 +2483,6 @@
 .bcdn-god.we-stats.com
 .bce.baidu.com
 .bcfeedback.taobao.com
-.bchtstmets.data.adobedc.net
 .bcsjcj.nasdaq.com
 .bcy-promo.snssdk.com
 .bd-p2p-v2.pull.yximgs.com
@@ -2498,7 +2507,6 @@
 .beacon.dropbox.com
 .beacon.gtimg.com
 .beacon.guim.co.uk
-.beacon.my.salesforce.com
 .beacon.netflix.com
 .beacon.qq.com
 .beacon.riskified.com
@@ -2651,6 +2659,7 @@
 .bshg.data.adobedc.net
 .bskyb.data.adobedc.net
 .bslivepull.qing.mgtv.com
+.bsnj.eyeblaster.akadns.net
 .bsp.sasdc.pandora.xiaomi.com
 .bsrv.qq.com
 .bss.pandora.xiaomi.com
@@ -2671,6 +2680,7 @@
 .buluo.qq.com
 .business-api.tiktok.com
 .busuanzi.ibruce.info
+.buy-cheap-phentermine.blogspot.com
 .buysellads.com
 .bv-analytics-js-prod.s3.amazonaws.com
 .bv-analytics-js-qa.s3.amazonaws.com
@@ -2823,6 +2833,7 @@
 .cdn.tanx.com
 .cdn.usefathom.com
 .cdn1.static.home.miui.com
+.cdn1sitescout.edgesuite.net
 .cdn3.cartoonporn.to
 .cdn3.optimizely.com
 .cdn5.cartoonporn.to
@@ -2867,6 +2878,8 @@
 .chatenabled.mail.google.com
 .chatpush.miguvideo.com
 .chattts-49f1.beszyrecala.workers.dev
+.cheap-web-hosting-here.blogspot.com
+.cheap-xanax-here.blogspot.com
 .checkx.pages.dev
 .cheezwhiz.z9.web.core.windows.net
 .chit-chat-e9053-default-rtdb.firebaseio.com
@@ -2891,6 +2904,7 @@
 .citrixtelemetryeh.servicebus.windows.net
 .citrixtelemetryeheu-alias.servicebus.windows.net
 .citrixtelemetryeheu.servicebus.windows.net
+.citycash2.blogspot.com
 .cjhq.baidu.com
 .cjklwer-sdkfje-skjdhf-esdf.netlify.app
 .cjroq.bealge.sogou.com
@@ -2990,6 +3004,7 @@
 .cmsjs.eastmoney.com
 .cmstool.youku.com
 .cmtw.pinduoduo.com
+.cmweb.ilike.alibaba.com
 .cmx.autohome.com.cn
 .cn-api.mcsvc.samsung.com.cn
 .cn-vmc-images.alicdn.com
@@ -3019,7 +3034,6 @@
 .co-vcode-api.vivoglobal.com
 .co-vcode-od.vivoglobal.com
 .co-vcode-or.vivoglobal.com
-.coca-cola.com.data.adobedc.net
 .cocojen.cdn.bcebos.com
 .col.eum-appdynamics.com
 .collect.alipay.com
@@ -3050,7 +3064,6 @@
 .collector-px1qo90wtr.px-cloud.net
 .collector-px1uglztko.px-cloud.net
 .collector-px1wqvvfc0.px-cloud.net
-.collector-px1y8ewaey.px-cloud.net
 .collector-px24c5soup.px-cloud.net
 .collector-px27m703hm.px-cloud.net
 .collector-px2bgppb9a.px-cloud.net
@@ -3094,7 +3107,6 @@
 .collector-px6xnn2xkk.px-cloud.net
 .collector-px6yz0qmxv.px-cloud.net
 .collector-px6zcfgh4h.px-cdn.net
-.collector-px6zcfgh4h.px-cloud.net
 .collector-px78vmo82c.px-cdn.net
 .collector-px78vmo82c.px-cloud.net
 .collector-px78vmo82c.pxchk.net
@@ -3279,7 +3291,6 @@
 .collector-pxnddshz8n.px-cloud.net
 .collector-pxneog4e2e.px-cloud.net
 .collector-pxnkbtefxe.px-cloud.net
-.collector-pxnkld3k8m.px-cloud.net
 .collector-pxnp9b16cq.px-cloud.net
 .collector-pxns7abmiv.px-cloud.net
 .collector-pxnslc0hv5.px-cloud.net
@@ -3607,6 +3618,7 @@
 .creatopy-adtag-production.b-cdn.net
 .creditonebank.data.adobedc.net
 .credits.bz.mgtv.com
+.creditsoffer.blogspot.com
 .criteo.com
 .crl.microsoft.com
 .crlog-crcn.adobe.com
@@ -5423,6 +5435,7 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .deprecated-custom-domains.b-cdn.net
+.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .deskwww.s3.amazonaws.com
 .desportivo-sk-server-side-tagging-6mdi5zbmba-lm.a.run.app
@@ -5736,6 +5749,7 @@
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
 .dqvpww3nzoeeq.cloudfront.net
+.dr.soso.com
 .dr3fr5q4g2ul9.cloudfront.net
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
@@ -6038,7 +6052,6 @@
 .etg.qq.com
 .etharticles.substack.com
 .ethicalads.io
-.etihadairways.data.adobedc.net
 .eu-album-api.vivoglobal.com
 .eu-central-1.elb.amazonaws.com
 .eu-cota.vivoglobal.com
@@ -6064,7 +6077,6 @@
 .euc-powerpoint-telemetry.officeapps.live.com
 .euc-visio-telemetry.officeapps.live.com
 .euc-word-telemetry.officeapps.live.com
-.eui.data.adobedc.net
 .eum.instana.io.cdn.cloudflare.net
 .eurffc-word-telemetry.officeapps.live.com
 .europe-west1-bonnier-big-data.cloudfunctions.net
@@ -6244,6 +6256,7 @@
 .fingerprint-upload.hellobike.com
 .fingerprinter-production.herokuapp.com
 .finnews7.wordpress.com
+.fioricet-online.blogspot.com
 .firebase.googleapis.com
 .firebasecrashlytics.googleapis.com
 .firebasedynamiclinks.googleapis.com
@@ -6280,13 +6293,13 @@
 .fmhy-net.pages.dev
 .fmhy-official.pages.dev
 .fmhy-ok.pages.dev
-.fmowipsxuf.data.adobedc.net
 .fodder.qq.com
 .fodder.tc.qq.com
 .fodoole-web-analytics-qfan6cresq-ew.a.run.app
 .folkrbvi.pages.dev
 .footprint.network.cdn.cloudflare.net
 .foreign.coloros.com
+.forex-trading-benefits.blogspot.com
 .forms-emea.lenovo.com
 .forms.lenovo.com
 .forms.sonos.com
@@ -6459,6 +6472,9 @@
 .getsquarebannerads-6egeg2u34q-du.a.run.app
 .getui.com
 .getui.net
+.getyour5kcredits0.blogspot.com
+.getyourgiftnow2.blogspot.com
+.getyourgiftnow3.blogspot.com
 .gfonts.jifo.co
 .gg-ads.b-cdn.net
 .gg.google.com
@@ -6672,6 +6688,8 @@
 .hijack.baidu.com
 .hilton.data.adobedc.net
 .hiphotos.baidu.com
+.hir44.blogspot.com
+.hirszabadsag.blogspot.com
 .historytrade.com
 .hits.sinajs.cn
 .hits.theguardian.com
@@ -6770,7 +6788,6 @@
 .homeborn.cn
 .homepage-trezer-doc.pages.dev
 .honey.io
-.hongkongbaptistuniversity.data.adobedc.net
 .hook.gitv.pandora.xiaomi.com
 .hoplink.ksosoft.com
 .hosts.vggwebsitetrackingprod.azurewebsites.net
@@ -6843,6 +6860,7 @@
 .hybrid.miui.com
 .hybrid.xiaomi.com
 .hydra.alibaba.com
+.hydrocodone-buy-online.blogspot.com
 .hyndtren25.pages.dev
 .hz-telemetry.adobe.io
 .hz.youku.com
@@ -6965,6 +6983,7 @@
 .img-bss.csdn.net
 .img-c.heytapimage.com
 .img-x.jd.com
+.img.alibaba.com
 .img.auction-ads.wpscdn.cn
 .img.en25.com
 .img.gou.wpscdn.cn
@@ -7224,6 +7243,7 @@
 .jumbo-server-side-tagging-europe-v2okrikgza-oa.a.run.app
 .jun01.oss-cn-beijing.aliyuncs.com
 .jzapi.baidu.com
+.jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
 .kalstats.kaltura.com
@@ -7246,11 +7266,13 @@
 .kgipadstatbak.kugou.com
 .kgmobilestat.kugou.com
 .kgmobilestatbak.kugou.com
+.kiks.yandex.ru
 .kinesis.eu-west-1.amazonaws.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
 .kjdsfjisdfjr23.azurewebsites.net
 .kjdvn1340-ads.blogspot.com
 .klclick1.com
+.klipmart.forbes.com
 .kmmgoogle.oss-ap-southeast-1.aliyuncs.com
 .kmr.service.kugou.com
 .kmrcdn.service.kugou.com
@@ -7312,6 +7334,7 @@
 .landingpage.emaillpb.adobe.com
 .lapin.ithome.com
 .larapush.com
+.lasopabowl158.weebly.com
 .launch.apple.com
 .launcher.baidu.com
 .launchpad-wrapper.privacymanager.io
@@ -7627,7 +7650,6 @@
 .logs.blip.net
 .logs.bloomberg.com
 .logs.browserstack.com
-.logs.chronosphere.io
 .logs.datadoghq.com
 .logs.douguo.net
 .logs.dradis.netflix.com
@@ -7881,6 +7903,7 @@
 .meetme-abc03-default-rtdb.firebaseio.com
 .mellowads.b-cdn.net
 .melyna92.workers.dev
+.membrana.media
 .mepodownload.mediatek.com
 .mercury-sdk.snssdk.com
 .mercury.jd.com
@@ -8006,6 +8029,7 @@
 .ml314.com
 .mllog.jd.com
 .mlog.search.xiaomi.net
+.mlpoo11-secondary.z13.web.core.windows.net
 .mm10mkavnh.data.adobedc.net
 .mmgame.qpic.cn
 .mmonitor.cc.163.com
@@ -8106,6 +8130,7 @@
 .mqtt.aliyuncs.com
 .mqtt.zhihu.com
 .ms.bdimg.com
+.ms.yandex.ru
 .msadsscale.azureedge.net
 .msadsscale.microsoft.com
 .msc.baidu.com
@@ -8117,6 +8142,7 @@
 .msg.mobile.kugou.com
 .msg.video.iqiyi.com
 .msg.youku.com
+.mshelp247.weebly.com
 .msite.baidu.com
 .mslfgl434.pages.dev
 .msmetrics.ws.sonos.com
@@ -8217,7 +8243,6 @@
 .nalytics.buy.yahoo.com
 .nano-game-ad-slot.oss-cn-hongkong.aliyuncs.com
 .napi.ucweb.com
-.nationalbankofcanada.data.adobedc.net
 .nationalemaatschappijderbelgischespoorwegen.data.adobedc.net
 .nativead.s3.amazonaws.com
 .nativeapp.toutiao.com
@@ -8235,7 +8260,6 @@
 .ndct-data.video.iqiyi.com
 .ndstage.wpengine.com
 .nearby.3g.qq.com
-.nedbank.data.adobedc.net
 .neirong.baidu.com
 .neptune-api.volces.com
 .neptune-platform.zijieapi.com
@@ -8258,7 +8282,6 @@
 .news-notification-events.apple.com
 .news-sports-events.apple.com
 .news.paypal.com.data.adobedc.net
-.newscorpau.data.adobedc.net
 .newspush.sinajs.cn
 .newtest.wunderman-email.cjm.adobe.com
 .newton-api.ele.me
@@ -8335,6 +8358,7 @@
 .nullitics.com
 .nvm6zgsnhj.data.adobedc.net
 .nxet1.360doc.cn
+.nytadvertising.nytimes.com
 .o.fandango.com
 .o.medallia.com
 .o.phb123.com
@@ -8360,7 +8384,9 @@
 .oceanengine.com
 .ocgadgetss.myshopify.com
 .odc.weather.com
+.odd-onead.cdn.hinet.net
 .odp.optimizely.com
+.offer.alibaba.com
 .officedepot.com.data.adobedc.net
 .offnavi.map.baidu.com
 .ofloc.map.baidu.com
@@ -8394,7 +8420,9 @@
 .onespot-tracking.herokuapp.com
 .onethingpcs.com
 .onezapp.com
+.online-forex-trading-systems.blogspot.com
 .online-metrix.net
+.online-pharmacy-online.blogspot.com
 .onrt-stsdk.vivo.com.cn
 .onrt-stsdk.vivoglobal.com
 .onthe.io
@@ -8442,6 +8470,7 @@
 .os-mon.snssdk.com
 .os-mon.zijieapi.com
 .os.fandango.com
+.osd-onead.cdn.hinet.net
 .osdkupdatenw.com
 .osfota.cdn.aliyun.com
 .osm-onead.cdn.hinet.net
@@ -8454,6 +8483,7 @@
 .otf.msn.com
 .oth.eve.qq.com
 .otk.pinduoduo.com
+.otpercpiheno.blogspot.com
 .ott-v0-al.data.mgtv.com
 .ott.v1.data.mgtv.com
 .ott.video.qq.com
@@ -8609,6 +8639,7 @@
 .performance.squarespace.com
 .permutive.app
 .permutive.com
+.peter-north-cum-shot.blogspot.com
 .petitions.whitehouse.gov
 .petrolprices-advertising.s3.eu-west-2.amazonaws.com
 .pfp.sina.com.cn
@@ -8666,6 +8697,7 @@
 .pgtus6-excel-telemetry-vip.officeapps.live.com
 .pgtus6-powerpoint-telemetry-vip.officeapps.live.com
 .pgtus6-word-telemetry-vip.officeapps.live.com
+.pharmacy-news.blogspot.com
 .phonesubmissions.apple.com
 .phonograph2.voxmedia.com
 .photovideo.photo.qq.com
@@ -8686,6 +8718,7 @@
 .pingback.giphy.com
 .pingback.sogou.com
 .pingfore.qq.com
+.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pinglun.qq.com
@@ -8722,7 +8755,6 @@
 .pl.thecontentserver.com.cdn.cloudflare.net
 .pl.youku.com
 .planebasin.com
-.plard-metrics-pd-temp-qa-s3.s3.us-east-1.amazonaws.com
 .platform.facebook.com
 .platform.linkedin.com
 .platform.tumblr.com
@@ -8808,6 +8840,7 @@
 .press2dori-safe.obs.la-south-2.myhuaweicloud.com
 .preview.crm.sms.miui.com
 .preview.msn.com
+.prexyone.appspot.com
 .prgm.b-cdn.net
 .primis.tech
 .privacy-center.org
@@ -9016,10 +9049,12 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
+.rads.stackoverflow.com
 .rai-amp-telemetry-ingestion.azurewebsites.net
 .raine.accuweather.com
 .raka.bing.com
 .raksha-bandhanm4.blogspot.com
+.rapid-glade-cde8.asoumare042024.workers.dev
 .rarepepewtf.pages.dev
 .ras.yahoo.com
 .rating6.kingsoft-office-service.com
@@ -9459,6 +9494,7 @@
 .secure.diet.mayoclinic.org
 .secure.report.iss.xiaomi.com
 .secureflashplayerfeedback.adobe.com
+.secureir.ebaystatic.com
 .securemetrics-z.v.aaplimg.com
 .securemetrics.apple.com.cn
 .securemetrics.v.aaplimg.com
@@ -9995,7 +10031,6 @@
 .server-side-tagging-rhlbzunxta-uc.a.run.app
 .server-side-tagging-rhn2623i7q-uc.a.run.app
 .server-side-tagging-rj65gor2xa-uc.a.run.app
-.server-side-tagging-rjdejobcoa-uc.a.run.app
 .server-side-tagging-rjrqqjli3q-uc.a.run.app
 .server-side-tagging-rm6bgdyvgq-uc.a.run.app
 .server-side-tagging-rmpby6ktmq-uc.a.run.app
@@ -10348,6 +10383,7 @@
 .splitbee.io
 .spocs.getpocket.com
 .spocs.mozilla.net
+.spolecznosci.mgr.consensu.org
 .sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .spot.im
@@ -10584,6 +10620,7 @@
 .support-portal.qualtrics.com
 .supportmetrics.apple.com
 .supportrecover.s3.eu-north-1.amazonaws.com
+.survey.china.alibaba.com
 .surveygizmobeacon.s3.amazonaws.com
 .susapi.lenovomm.com
 .suvset.sohu.com
@@ -10680,7 +10717,6 @@
 .talkback-reports.mozilla.org
 .talkback.mozilla.org
 .tandc.salesforce.com
-.tangerinebankingapp.data.adobedc.net
 .tangyamount.com
 .taobao.qq.com
 .tap-nexus.appspot.com
@@ -10822,6 +10858,7 @@
 .titan-mt.pinduoduo.com
 .titan-ws.pinduoduo.com
 .titan.pinduoduo.com
+.titkoshirek.wordpress.com
 .tivan.naver.com
 .tj.b.qq.com
 .tj.kugou.com
@@ -10906,7 +10943,6 @@
 .togame.iqiyi.com
 .toggle.qq.com
 .tomarket-rewards.vercel.app
-.tomg1ddovp.data.adobedc.net
 .tomtom.pages.dev
 .tongdun-fingerprint.walmartmobile.cn
 .tongdun.net
@@ -10914,6 +10950,7 @@
 .toolbar.baidu.com
 .toolbar.google.com
 .toolbar.msn.com
+.toolbar.soso.com
 .tools.3g.qq.com
 .tools.prnewswire.com
 .toots-a.akamaihd.net
@@ -10922,6 +10959,7 @@
 .top.h.qhimg.com
 .top.mail.ru
 .top.taobao.com
+.top5.mail.ru
 .topapi.cp12.ott.cibntv.net
 .toruk.gds.tanx.com
 .tos-cn-beijing.volces.com
@@ -11092,6 +11130,7 @@
 .ttse.b-cdn.net
 .tttppp.oss-cn-guangzhou.aliyuncs.com
 .tubescms.phncdn.com
+.tudnodkel.blogspot.com
 .tui.gtimg.com
 .tui.taobao.com
 .tui.weibo.com
@@ -11201,7 +11240,6 @@
 .umengacs.m.taobao.com
 .umengcloud.com
 .umengjmacs.m.taobao.com
-.umhnseqepn.data.adobedc.net
 .umlazada.alibaba.com
 .ums-rum-cn.heytapimage.com
 .ums-rum-global.heytapimage.com
@@ -11244,6 +11282,7 @@
 .unity-metrics.cds.unity3d.com
 .unity-metrics.ds.unity3d.com
 .unityads.edgesuite.net
+.unityads.unity.cn
 .unityads.unity3d.com
 .universalorlando.com.data.adobedc.net
 .unstat.baidu.com
@@ -11394,6 +11433,7 @@
 .vegameapi.volces.com
 .vegamemon.volces.com
 .vegslb.com
+.vendorlist.consensu.org
 .vendors.privacymanager.io
 .venezia-measurements.s3-external-1.amazonaws.com
 .veta.naver.com
@@ -11414,6 +11454,7 @@
 .vhotwsh.video.qq.com
 .vi.xiaohongshu.com
 .via.intercom.io
+.viagra-pill.blogspot.com
 .video-ad.sm.cn
 .video-analytics-api.cloudinary.com
 .video-analytics.one-98d.workers.dev
@@ -11431,6 +11472,7 @@
 .view.zijieapi.com
 .views.hulu.com.akadns.net
 .viking.com.data.adobedc.net
+.vilaghelyzete.blogspot.com
 .vip-api.xmpush.global.xiaomi.com
 .virusinfo-cloudscan-cn.heytapmobi.com
 .visio-telemetry.officeapps.live.com
@@ -11449,6 +11491,7 @@
 .vodafonein.data.adobedc.net
 .vodus-api-serverless.azurewebsites.net
 .vodus-api.azurewebsites.net
+.voduscdn.azureedge.net
 .voiceads.cn
 .volceapplog.com
 .volcsiriusbd.com
@@ -11660,6 +11703,7 @@
 .www-googletagmanager.l.google.com
 .www.addtoany.com
 .www.info.redhat.com
+.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www6.gemalto.com
 .www7.springer.com
