--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-28 10:43:32
-# Total rules: 11989
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-29 09:45:04
+# Total rules: 12007
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -8,6 +8,7 @@
 .0gc6y58nkk.data.adobedc.net
 .0lovespells0.blogspot.com
 .0m1hix10po.data.adobedc.net
+.0nvdw1kkeb.data.adobedc.net
 .0x00000000000.substack.com
 .1.wps.cn
 .1080872514.rsc.cdn77.org
@@ -848,6 +849,7 @@
 .a28789770007.cdn.optimizely.com
 .a28810310281.cdn.optimizely.com
 .a28826650685.cdn.optimizely.com
+.a28861330358.cdn.optimizely.com
 .a28901180531.cdn.optimizely.com
 .a28930870021.cdn.optimizely.com
 .a2900460605.cdn.optimizely.com
@@ -980,6 +982,7 @@
 .a4808268718538752.cdn.optimizely.com
 .a48120048.cdn.optimizely.com
 .a4837467023474688.cdn.optimizely.com
+.a4843963509637120.cdn.optimizely.com
 .a4855038938447872.cdn.optimizely.com
 .a4912227187163136.cdn.optimizely.com
 .a4942072910708736.cdn.optimizely.com
@@ -1000,6 +1003,7 @@
 .a5292374380249088.cdn.optimizely.com
 .a5324015129067520.cdn.optimizely.com
 .a5334142238326784.cdn.optimizely.com
+.a5349239316807680.cdn.optimizely.com
 .a5354424722259968.cdn.optimizely.com
 .a5364082103025664.cdn.optimizely.com
 .a5366642083889152.cdn.optimizely.com
@@ -1019,6 +1023,7 @@
 .a5607107806887936.cdn.optimizely.com
 .a5624231270.cdn.optimizely.com
 .a5641440198393856.cdn.optimizely.com
+.a5676741851611136.cdn.optimizely.com
 .a5682661843271680.cdn.optimizely.com
 .a5698391926112256.cdn.optimizely.com
 .a5719158042656768.cdn.optimizely.com
@@ -1043,6 +1048,7 @@
 .a61135178.cdn.optimizely.com
 .a6131884851.cdn.optimizely.com
 .a6136581106.cdn.optimizely.com
+.a6147442509348864.cdn.optimizely.com
 .a6147784059912192.cdn.optimizely.com
 .a6169963916951552.cdn.optimizely.com
 .a6194110778.cdn.optimizely.com
@@ -1051,6 +1057,7 @@
 .a6253774759526400.cdn.optimizely.com
 .a627150995.cdn.optimizely.com
 .a6295702960078848.cdn.optimizely.com
+.a6354269197041664.cdn.optimizely.com
 .a6376052200046592.cdn.optimizely.com
 .a6451678757519360.cdn.optimizely.com
 .a6502622515.cdn.optimizely.com
@@ -1215,11 +1222,10 @@
 .ad-instantpage-va.tiktokv.com
 .ad-interactions-prod-lb-1289981577.us-west-1.elb.amazonaws.com
 .ad-interactions-prod-lb-1426714899.eu-west-2.elb.amazonaws.com
+.ad-interactions-prod-lb-484900216.ap-northeast-1.elb.amazonaws.com
 .ad-interactions-prod-lb-773417274.us-east-2.elb.amazonaws.com
 .ad-log-upload-os.mihoyo.com
 .ad-log-upload.mihoyo.com
-.ad-manager-public-assets.s3.us-east-2.amazonaws.com
-.ad-material.ys7.com
 .ad-ops-assets.s3.us-east-1.amazonaws.com
 .ad-pdf.s3.amazonaws.com
 .ad-scope.com.cn
@@ -1730,7 +1736,6 @@
 .advertising-api.amazon.com
 .advertising-eu.amazon.com
 .advertising.adobe.com
-.advertising.amazon.cn
 .advertising.amazon.co.jp
 .advertising.amazon.com
 .advertising.apple.com
@@ -2014,13 +2019,13 @@
 .analytics.p06.eloqua.com
 .analytics.paddle.com
 .analytics.pangle-ads.com.edgesuite.net
-.analytics.partnerboost.com
 .analytics.pgncs.notion.so
 .analytics.pinterest.com
 .analytics.pnw.appsvc.an.adobe.com
 .analytics.podtrac.com
 .analytics.pointdrive.linkedin.com
 .analytics.python.org
+.analytics.qualcomm.com
 .analytics.query.yahoo.com
 .analytics.rev.iq
 .analytics.routinehub.co
@@ -2255,10 +2260,11 @@
 .app.chat.xiaomi.net
 .app.info.redhat.com
 .app.launchdarkly.com
+.app.mintmobile.com
 .app.miui.com
 .app.optimizely.com
-.app.partnerboost.com
 .app.pendo.io
+.app.qesmarketing.qualcomm.com
 .app.reuters.com
 .app.sbz.workers.dev
 .app.scene7info.adobe.com
@@ -2313,7 +2319,6 @@
 .appstore.cdn.pandora.xiaomi.com
 .appstore.pandora.xiaomi.com
 .appsupport.qq.com
-.apptreezorsuite.github.io
 .appversion.115.com
 .apsrgeo.amap.com
 .aptmetrics.qualtrics.com
@@ -2772,6 +2777,7 @@
 .campaign.adobe.com
 .campaigncs-dra.himovie.hicloud.com
 .cams.xvideos.com
+.canadiantire.data.adobedc.net
 .capi.voice.gcloud.qq.com
 .capitalone-analytics.digital-cloud.medallia.com
 .capture.condenastdigital.com
@@ -2942,7 +2948,6 @@
 .click.oneplus.com
 .click.sender.yandex.ru
 .click.simba.taobao.com
-.click.tanx.com
 .click.tz.simba.taobao.com
 .click2.hd.sohu.com
 .click360v2-ingest.azurewebsites.net
@@ -3145,7 +3150,6 @@
 .collector-pxaoit9cn0.px-cloud.net
 .collector-pxaotqiwnf.px-cloud.net
 .collector-pxawqdobrw.px-cloud.net
-.collector-pxaxvw3l5r.px-cloud.net
 .collector-pxb47t2jmz.px-cloud.net
 .collector-pxb5ezgwhw.px-cloud.net
 .collector-pxbdaexv9t.px-cloud.net
@@ -3153,6 +3157,7 @@
 .collector-pxcfrcfefa.px-cloud.net
 .collector-pxckx6ilor.px-cdn.net
 .collector-pxckx6ilor.px-cloud.net
+.collector-pxclmbonip.px-cloud.net
 .collector-pxcvbtpurj.px-cdn.net
 .collector-pxcvbtpurj.px-cloud.net
 .collector-pxcvbtpurj.pxchk.net
@@ -3182,6 +3187,7 @@
 .collector-pxferelyy8.px-cloud.net
 .collector-pxfezbrgkr.px-cloud.net
 .collector-pxff0j69t5.px-cdn.net
+.collector-pxff0j69t5.px-cloud.net
 .collector-pxfofgwnle.px-cloud.net
 .collector-pxfofgwnle.pxchk.net
 .collector-pxfrhhzvid.px-cdn.net
@@ -3229,6 +3235,7 @@
 .collector-pxirnc16b3.px-cloud.net
 .collector-pxiuboghjl.px-cdn.net
 .collector-pxiuboghjl.px-cloud.net
+.collector-pxiuboghjl.pxchk.net
 .collector-pxizzvm3ey.px-cloud.net
 .collector-pxj1foyb2i.px-cloud.net
 .collector-pxj4y0bbmn.px-cdn.net
@@ -3267,6 +3274,7 @@
 .collector-pxktmrtopw.px-cloud.net
 .collector-pxkxodf6rk.px-cdn.net
 .collector-pxkz8zzqmw.px-cloud.net
+.collector-pxl3efeja7.px-cloud.net
 .collector-pxlb0vny7w.px-cloud.net
 .collector-pxldlac4jd.px-cloud.net
 .collector-pxldm3ddsw.px-cdn.net
@@ -3291,6 +3299,7 @@
 .collector-pxnddshz8n.px-cloud.net
 .collector-pxneog4e2e.px-cloud.net
 .collector-pxnkbtefxe.px-cloud.net
+.collector-pxnkld3k8m.px-cloud.net
 .collector-pxnp9b16cq.px-cloud.net
 .collector-pxns7abmiv.px-cloud.net
 .collector-pxnslc0hv5.px-cloud.net
@@ -3324,8 +3333,8 @@
 .collector-pxpvnjmp4g.px-cdn.net
 .collector-pxpvnjmp4g.px-cloud.net
 .collector-pxpvnjmp4g.pxchk.net
-.collector-pxq2osncsa.px-cloud.net
 .collector-pxq99aloxk.px-cloud.net
+.collector-pxqegyaqlb.px-cloud.net
 .collector-pxqerrwgji.px-cloud.net
 .collector-pxqm4ecyhh.px-cloud.net
 .collector-pxqqxm841a.px-cloud.net
@@ -3712,6 +3721,7 @@
 .d12czbu0tltgqq.cloudfront.net
 .d12dky1jzngacn.cloudfront.net
 .d12e9f83wyj0ww.cloudfront.net
+.d12llxoeoqg343.cloudfront.net
 .d12lysxt2c11pc.cloudfront.net
 .d12nvv2jqzsaax.cloudfront.net
 .d12t7h1bsbq1cs.cloudfront.net
@@ -5520,6 +5530,7 @@
 .di2e2m1cmrtc9.cloudfront.net
 .di2xlfgjbl0v7.cloudfront.net
 .di2xwvxz1jrvu.cloudfront.net
+.di6y7cb0tkbww.cloudfront.net
 .diagmon-policy.samsungdm.com
 .diagmon-serviceapi.samsungdm.com
 .diagnostics.support.microsoft.com
@@ -5971,6 +5982,7 @@
 .effortless-lokum-f88801.netlify.app
 .effulgent-stroopwafel-efb9ce.netlify.app
 .eg.nytimes.com
+.egencia.com.data.adobedc.net
 .ehd.baike.com
 .eic-ngfts.lge.com
 .eiv.baidu.com
@@ -6077,6 +6089,7 @@
 .euc-powerpoint-telemetry.officeapps.live.com
 .euc-visio-telemetry.officeapps.live.com
 .euc-word-telemetry.officeapps.live.com
+.eui.data.adobedc.net
 .eum.instana.io.cdn.cloudflare.net
 .eurffc-word-telemetry.officeapps.live.com
 .europe-west1-bonnier-big-data.cloudfunctions.net
@@ -6249,7 +6262,6 @@
 .file.market.xiaomi.com
 .files2.sogou.com
 .filmes-e-seriados.blogspot.com
-.fimserve.ign.com
 .final-claim.pages.dev
 .find.api.micloud.xiaomi.net
 .findapi.micloud.xiaomi.net
@@ -6782,12 +6794,14 @@
 .hm2wjuuus3.execute-api.ap-northeast-1.amazonaws.com
 .hme-live-loganalytics-namespace.servicebus.windows.net
 .hmma.baidu.com
+.hnpkxjfbax.data.adobedc.net
 .hog.crowdin.com
 .holaflylimited.data.adobedc.net
 .home.compete.com.edgesuite.net
 .homeborn.cn
 .homepage-trezer-doc.pages.dev
 .honey.io
+.hongkongbaptistuniversity.data.adobedc.net
 .hook.gitv.pandora.xiaomi.com
 .hoplink.ksosoft.com
 .hosts.vggwebsitetrackingprod.azurewebsites.net
@@ -6942,6 +6956,7 @@
 .ifsau-in.coloros.com
 .ifsau.coloros.com
 .ifsk2.tanx.com
+.igcum80w74.data.adobedc.net
 .igexin.com
 .ikcart.alipay.com
 .ikcode.baidu.com
@@ -7182,7 +7197,6 @@
 .japfg-trending-content.uc.r.appspot.com
 .javascriptcounter.appspot.com
 .javzzy6fnh.data.adobedc.net
-.jbbwzdbgk2.data.adobedc.net
 .jcm.jd.com
 .jcollection.shuqireader.com
 .jddebug.com
@@ -7197,6 +7211,7 @@
 .jjpp.lmtjapi.com
 .jly24aw29n5m-a.akamaihd.net
 .jmt17.google.com
+.johnhancockfinancialservices.data.adobedc.net
 .join.zendesk.com
 .joinhoney.com
 .jomodns.com
@@ -7296,6 +7311,7 @@
 .kunyu.csdn.net
 .kuwaitpetroleumit.data.adobedc.net
 .kvop8mlpon.data.adobedc.net
+.kwa3a4b13f.data.adobedc.net
 .kwurl.ucweb.com
 .kxlogo.knet.cn
 .kz-cname-sin01-bigdata.vivoglobal.com
@@ -7648,7 +7664,6 @@
 .logs.appsource.microsoft.com
 .logs.betterstack.com
 .logs.blip.net
-.logs.bloomberg.com
 .logs.browserstack.com
 .logs.datadoghq.com
 .logs.douguo.net
@@ -8224,6 +8239,7 @@
 .mycu.socu.com.cdn.cloudflare.net
 .myes.youku.com
 .myhandshops.myshopify.com
+.mysite.webroot.com
 .mysynchrony.com.data.adobedc.net
 .mythdev.b-cdn.net
 .mz.unity3d.com
@@ -8242,6 +8258,7 @@
 .nadvideo2.baidu.com
 .nalytics.buy.yahoo.com
 .nano-game-ad-slot.oss-cn-hongkong.aliyuncs.com
+.napaprolink.com.data.adobedc.net
 .napi.ucweb.com
 .nationalemaatschappijderbelgischespoorwegen.data.adobedc.net
 .nativead.s3.amazonaws.com
@@ -8470,6 +8487,7 @@
 .os-mon.snssdk.com
 .os-mon.zijieapi.com
 .os.fandango.com
+.osc.webroot.com
 .osd-onead.cdn.hinet.net
 .osdkupdatenw.com
 .osfota.cdn.aliyun.com
@@ -8584,6 +8602,7 @@
 .partner.toutiao.com
 .partner.uc.cn
 .partnerad.l.google.com
+.partnerboost.com
 .passport-log.youku.com
 .passwordfix.blogspot.com
 .pay.mobile.sina.cn
@@ -9080,7 +9099,6 @@
 .read.medium.com
 .reader.sh.vip.qq.com
 .reading-lq.snssdk.com
-.readmo.yahoo.com
 .readserver.cachefly.net
 .rec5.visualwebsiteoptimizer.com
 .recipe-tracker-cno2ebznoq-uc.a.run.app
@@ -9986,7 +10004,6 @@
 .server-side-tagging-pfb3tkcfna-uc.a.run.app
 .server-side-tagging-ph4bjl3uhq-uc.a.run.app
 .server-side-tagging-piacwjzpmq-uc.a.run.app
-.server-side-tagging-pjh7rygsaq-uc.a.run.app
 .server-side-tagging-pl7fk45jlq-uc.a.run.app
 .server-side-tagging-pmr5pfx43a-uc.a.run.app
 .server-side-tagging-pmrkxe6mda-uc.a.run.app
@@ -10641,6 +10658,7 @@
 .symplr-analytics-xddc4j3vva-ey.a.run.app
 .sync-yieldmo-com-tf-1869548451.eu-west-1.elb.amazonaws.com
 .synchrony.com.data.adobedc.net
+.synchronybank.com.data.adobedc.net
 .syncplusconfig.s3.amazonaws.com
 .syncwallet.pages.dev
 .syndicatedsearch.goog
